force-app/main/default/objects/BatchNumber__c/BatchNumber__c.object-meta.xml
<CustomObject>
    <label>Batch Number</label>
    <nameField>
        <label>Batch Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>