force-app/main/default/objects/BatchNumber__c/fields/FG_Code__c.field-meta.xml
<CustomField>
    <fullName>FG_Code__c</fullName>
    <label>FG Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>