force-app/main/default/objects/BatchNumber__c/fields/FG_Description__c.field-meta.xml
<CustomField>
    <fullName>FG_Description__c</fullName>
    <label>FG Description</label>
    <type>TextArea</type>
</CustomField>