force-app/main/default/objects/BatchNumber__c/fields/Flavour__c.field-meta.xml
<CustomField>
    <fullName>Flavour__c</fullName>
    <label>Flavour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>